manifests/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syfter-postgres
  namespace: syfter
  labels:
    app: syfter-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgresql
  selector:
    app: syfter-db
